--- a/UniversiteDomain/UniversiteDomain.csproj
+++ b/UniversiteDomain/UniversiteDomain.csproj
@@ -10,10 +10,12 @@
       <Folder Include="UseCases\EtudiantUseCases\Delete\" />
       <Folder Include="UseCases\EtudiantUseCases\Get\" />
       <Folder Include="UseCases\EtudiantUseCases\Update\" />
-      <Folder Include="UseCases\ParcoursUseCases\Create\" />
       <Folder Include="UseCases\ParcoursUseCases\Delete\" />
       <Folder Include="UseCases\ParcoursUseCases\Get\" />
       <Folder Include="UseCases\ParcoursUseCases\Update\" />
+      <Folder Include="UseCases\UeUseCases\Delete\" />
+      <Folder Include="UseCases\UeUseCases\Get\" />
+      <Folder Include="UseCases\UeUseCases\Update\" />
     </ItemGroup>
 
 </Project>
