--- a/UniversiteRestApi/UniversiteRestApi.csproj
+++ b/UniversiteRestApi/UniversiteRestApi.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CsvHelper" Version="33.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
       <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
